primera entrada del blog

--- a/blog.html
+++ b/blog.html
@@ -6,7 +6,6 @@
     <title>Voz KEF - Blog</title>
     <link rel="stylesheet" href="styles.css">
     <script src="js/includes.js" defer></script>
-
 </head>
 <body>
 
@@ -23,8 +22,8 @@
             <select id="filter-topic">
                 <option value="all">Todas las publicaciones</option>
                 <option value="activismo">Activismo</option>
-                <option value="formacion">Formación e Intervención</option>
-                <option value="consumo">Consumo Local y Consciente</option>
+                <option value="formacion">Formación</option>
+                <option value="consumo">Colaboración</option>
             </select>
 
             <label for="filter-date">Filtrar por fecha:</label>
@@ -46,30 +45,14 @@
         <div id="blog-entries">
             <!-- Blog Entry Example -->
             <div class="blog-entry" data-topic="activismo" data-date="2023-10-01" data-comments="30">
-                <h2><a href="#">Activismo: Our Latest Efforts</a></h2>
+                <h2><a href="/entrada1.html">La causa climática es un asunto de género</a></h2>
                 <p>Explore our activism initiatives and how we contribute to social change.</p>
                 <p class="meta">Fecha: October 1, 2023 | Tiempo de Lectura: 5 min | Comentarios: 30</p>
             </div>
-
-            <div class="blog-entry" data-topic="formacion" data-date="2023-09-15" data-comments="15">
-                <h2><a href="#">Formación e Intervención: Training for Change</a></h2>
-                <p>Discover how our training programs are fostering a better future through active interventions.</p>
-                <p class="meta">Fecha: September 15, 2023 | Tiempo de Lectura: 7 min | Comentarios: 15</p>
-            </div>
-
-            <div class="blog-entry" data-topic="consumo" data-date="2023-09-20" data-comments="5">
-                <h2><a href="#">Consumo Local y Consciente: Promoting Sustainability</a></h2>
-                <p>Learn how local and sustainable consumption can help drive positive change.</p>
-                <p class="meta">Fecha: September 20, 2023 | Tiempo de Lectura: 4 min | Comentarios: 5</p>
-            </div>
-
             <!-- More blog entries here -->
         </div>
     </section>
-
     <div id="footer-placeholder"></div>
-
     <script src="filter.js"></script>
-
 </body>
 </html>
