--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                     <p><a href="sumate.html">¡Súmate a KEF y hagamos historia!</a></p>
                 </div>
                 <div>
-                    <img src="assets/images/RevitalizaciónRíoPance/RP2.jpg" alt="KEF Team Image">
+                    <img src="assets/images/circuloSiembra.jpg" alt="KEF Team Image">
                 </div>
 
             </div>
