pagos pendiente aun

--- a/blog.html
+++ b/blog.html
@@ -46,7 +46,7 @@
             <!-- Blog Entry Example -->
             <div class="blog-entry" data-topic="activismo" data-date="2023-10-01" data-comments="30">
                 <h2><a href="/entrada1.html">La causa climática es un asunto de género</a></h2>
-                <p>Explore our activism initiatives and how we contribute to social change.</p>
+                <p>"Nos seguimos chocando de frente con un muro de gobiernos negacionistas, que se han mostrado poco comprometidos con la causa climática"</p>
                 <p class="meta">Fecha: October 1, 2023 | Tiempo de Lectura: 5 min | Comentarios: 30</p>
             </div>
             <!-- More blog entries here -->
