--- a/consumo.html
+++ b/consumo.html
@@ -15,7 +15,7 @@
     <section class="hero-consumo">
         <div class="hero-content">
             <div class="hero-text">
-                <h1>Consumo</h1>
+                <h1>Colaboración</h1>
                 <p>Únete a nuestros programas de consumo para repensar nuestros hábitos diarios.</p>
                 <a href="contact-us.html" class="cta-button-consumo">Contáctanos</a>
             </div>
