--- a/index.html
+++ b/index.html
@@ -22,8 +22,40 @@
                     <div class="main-hero-content">
                         <div class="main-hero-text">
                             <h1>BIENVENIDXS A KEF</h1>
-                            <p>Somos una comunidad de mujeres que impulsa la equidad de género y la justicia ambiental en Cali y la región pacífica.<br><br> Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario).<br><br> ¡Así que súmate a esta historia! <br>KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
-                            <a class="main-hero-button" href="sumate.html">Súmate</a>
+                            <p>Somos una comunidad de mujeres que impulsa la equidad de género y la justicia ambiental en Cali y la región pacífica.<br><br></p>
+                                <section class="full-section-wrapper main-hero-image" id="hero-image" z-index="20">
+                                <!-- Bottom: Image or Design -->
+                                    <div>
+                                        <img src="assets/8M-2025.jpeg" alt="Hero Image">
+                                    </div>
+                                    <!-- Banner 1: After Hero (99CC33) -->
+                                    <div class="moving-banner" style="background-color: #8E44AD;">
+                                        <div class="banner-text">
+                                            <ul>
+                                                <li>AMIGAS</li>
+                                                <li>HERMANAS</li>
+                                                <li>HIJAS</li>
+                                                <li>PARCERAS</li>
+                                                <li>COMPAÑERES</li>
+                                                <li>CONOCE KEF</li>
+                                                <li>MADRES</li>
+                                                <li>ALIADAS</li>
+                                                <li>AMIGAS</li>
+                                                <li>HERMANAS</li>
+                                                <li>HIJAS</li>
+                                                <li>PARCERAS</li>
+                                                <li>COMPAÑERES</li>
+                                                <li>CONOCE KEF</li>
+                                                <li>MADRES</li>
+                                                <li>ALIADAS</li>
+                                            </ul>
+                                        </div>
+                                    </div>
+                                </section>
+                            <p>Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario).<br><br> ¡Así que súmate a esta historia! <br>KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
+                            <div class="main-hero-button-container">
+                                <a class="main-hero-button" href="sumate.html">Súmate</a>
+                            </div>
                             <div class="main-hero-social-container">
                                 <div class="footer-social social-hero">
                                     <a href="https://facebook.com" target="_blank">
@@ -50,35 +82,6 @@
                     </div>
                 </div>
         </section>
-        <section class="full-section-wrapper main-hero-image" id="hero-image" z-index="20">
-        <!-- Bottom: Image or Design -->
-            <div>
-                <img src="assets/8M-2025.jpeg" alt="Hero Image">
-            </div>
-            <!-- Banner 1: After Hero (99CC33) -->
-            <div class="moving-banner" style="background-color: #8E44AD;">
-                <div class="banner-text">
-                    <ul>
-                        <li>AMIGAS</li>
-                        <li>HERMANAS</li>
-                        <li>HIJAS</li>
-                        <li>PARCERAS</li>
-                        <li>COMPAÑERES</li>
-                        <li>CONOCE KEF</li>
-                        <li>MADRES</li>
-                        <li>ALIADAS</li>
-                        <li>AMIGAS</li>
-                        <li>HERMANAS</li>
-                        <li>HIJAS</li>
-                        <li>PARCERAS</li>
-                        <li>COMPAÑERES</li>
-                        <li>CONOCE KEF</li>
-                        <li>MADRES</li>
-                        <li>ALIADAS</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
         <section class="full-section-wrapper" z-index="30">
             <!-- Cards Full Section -->
             <div class="full-section cards-full">
@@ -92,7 +95,7 @@
                         <!-- Activismo Card -->
                         <a href="activismo.html">
                         <div class="card activismo">
-                            <h3>💜 Activismo</h3>
+                            <h3>Activismo</h3>
                             <p>Hacemos ruido y nos movilizamos para defender nuestras causas. Participamos en marchas, intervenciones urbanas, acciones simbólicas y campañas de sensibilización que generan impacto y visibilizan la lucha por los derechos de las mujeres y el medio ambiente.</p>
                         </div>
                         </a>
