--- a/about-us.html
+++ b/about-us.html
@@ -49,6 +49,10 @@
                     <div class="card">
                         <h3>Maria Camila Ordóñez - Equipo de Comunicación y Presencia Digital</h3>
                         <p>Abogada, comunicadora e investigadora interesada en el uso del derecho como herramienta de transformación social. Ha participado en espacios académicos y de activismo en defensa de la autonomía sexual y reproductiva en Cali, Colombia. Ha colaborado en investigaciones con el Observatorio para la Equidad de las Mujeres (OEM) y el Grupo de Acciones Públicas de la Universidad ICESI (GAPI), contribuyendo al análisis y la incidencia en temas de género y derechos humanos.</p>
+                    </div> 
+                    <div class="card">
+                        <h3>Julian Amaya López - Equipo de Marketing y Diseño</h3>
+                        <p>Colombiano de nacimiento, Caleño de corazón y Español por amor. Estudió  marketing en Brighton, UK, donde diseñó el logo ganador de Brighton and Hove City in Bloom, premiado por el alcalde. Una persona que convierte ideas en planes, planes en acciones y acciones en resultados. En KEF, es quien que llega con ideas frescas, estructura los procesos y encuentra la forma de que todo fluya. Porque el marketing no es solo contar cosas bonitas: es hacer que pasen.</p>
                     </div>
                     <div class="card">
                         <h3>Javier Núñez Jaimes - Equipo de Comunicación y Presencia Digital</h3>
