ultimos cambios Marzo 24-pre meeting

--- a/sumate.html
+++ b/sumate.html
@@ -47,6 +47,11 @@
     <!-- Consumo Local y Consciente Section -->
     <section class="line-of-work">
         <h2>Colaboración</h2>
+        <container class="about-section">
+            <div class="about-us-image">
+                <img src="/assets/images/COP16/PB2-1.jpeg">
+            </div>
+        </container>
         <p>Apoyar el consumo responsable y sostenible a nivel local es parte de nuestro trabajo.  Si tienes un producto local y/o artesanal que genere un impacto social, ambiental y de género, queremos que hagas parte de nuestras aliadas.  Al unirte, apoyaremos la visibilidad de tus productos y participarás en eventos que promueven prácticas de consumo consciente en la ciudad.</p>
         <p><strong>Actividades:</strong> Alianzas, estrategias de concientización y ferias locales.</p>
         <p><strong>Foco principal:</strong> Fomentar el consumo local y las prácticas sostenibles que ponen el cuidado de la vida en el centro de todo.</p>
