--- a/activismo.html
+++ b/activismo.html
@@ -24,10 +24,9 @@
             </div>
         </div>
         
-        
         <!-- Community and Allies Section -->
         <div class="allies">
-            <h2>Desde el año 2023 hemos participado en las siguientes marchas, intervenciones urbanas, acciones simbólicas y campañas de sensibilización.</h2>
+            <p>Desde el año 2023 hemos participado en las siguientes marchas, intervenciones urbanas, acciones simbólicas y campañas de sensibilización.</p>
         </div>
         <div id="carousel-container"></div>
         <!-- Modal for Expanded Image -->
