--- a/dona.html
+++ b/dona.html
@@ -14,8 +14,8 @@
     <main>
         <!-- Hero Section -->
         <section class="hero-content hero-donations">
-            <h1>Haz Tu Donación</h1>
-            <p>Contribuye a nuestra causa mediante donaciones de ropa o aportes financieros.<br> Cada donación ayuda a mejorar la vida de aquellos que más lo necesitan.</p>
+            <h1>¿Cómo puedes apoyarnos?</h1>
+            <p>Puedes apoyarnos de dos formas: adquiriendo productos KEF hechos en colaboración con nuestras aliadas o donando ropa y/o útiles escolares para las comunidades de Juanchaco, Ladrilleros y la Barra.</p>
         </section>
 
         <!-- Clothing Donations Section -->
@@ -23,14 +23,11 @@
             <div class="donations-content">
                 <!-- Left Side: Text Content -->
                 <div class="donations-text">
-                    <h2>Donaciones de Ropa</h2>
-                    <p>Ayuda a las comunidades necesitadas donando ropa en buen estado. Aceptamos ropa para todas las edades y estaciones del año. Puedes dejarlas en nuestras sedes o coordinamos una recogida.</p>
-                    <ul>
-                        <li>Ropa para adultos y niños</li>
-                        <li>Ropa de invierno y verano</li>
-                        <li>Accesorios: guantes, bufandas, sombreros, etc.</li>
-                    </ul>
-                    <a href="clothing-donations.html" class="cta-button">Más Información</a>
+                    <h2>Productos KEF</h2>
+                    <p>No hay nada más enriquecedor que construir en colectivo y de la mano de mujeres poderosas.</p>
+                    <p>Por ello, en KEF tienda visibilizamos y promovemos emprendimientos de mujeres colombianas que le apuestan a producir a pequeña escala, con métodos artesanales y con un propósito social, ambiental y de género.</p>
+                    <p>Adquiere los productos KEF en nuestro <a href="/contact-us.html" class="tienda-kef-link">punto físico</a> o tienda virtual.</p>
+                    <a href="https://www.instagram.com/tienda_kef/" class="cta-button tienda-kef">Tienda KEF</a>
                 </div>
             </div>
         </section>
@@ -40,10 +37,11 @@
             <div class="donations-content">
                 <!-- Right Side: Text Content -->
                 <div class="donations-text">
-                    <h2>Donaciones Financieras</h2>
-                    <p>Contribuye económicamente para apoyar nuestros programas de activismo, formación, y sostenibilidad. Tu donación financiará actividades, capacitación, y ayuda directa a las comunidades.</p>
-                    <p>Puedes realizar donaciones seguras mediante PayPal o transferencia bancaria.</p>
-                    <a href="financial-donations.html" class="cta-button">Donar Ahora</a>
+                    <h2>Donaciones de ropa y/o útiles escolares</h2>
+                    <p>Dona ropa en excelente estado y/o útiles escolares a los <a class="juanchamigos" href="https://www.instagram.com/juanchamigoss">Juanchamigos</a></p>
+                    <p>Anualmente y con el apoyo de la Fundación Huaitoto, Coral Resort y Plástico Precioso Uramba se realizan 2 jornadas de intercambio de ropa y útiles escolares por plástico reciclado de las playas de Juanchaco, Ladrilleros y la Barra.</p> 
+                    <p>Súmate como voluntario o donante y haz esto posible.</p>
+                    <a href="financial-donations.html" class="cta-button">Más información</a>
                 </div>
             </div>
         </section>
