--- a/index.html
+++ b/index.html
@@ -23,36 +23,15 @@
                         <div class="main-hero-text">
                             <h1>BIENVENIDXS A KEF</h1>
                             <p>Somos una comunidad de mujeres que impulsa la equidad de género y la justicia ambiental en Cali y la región pacífica.<br><br></p>
-                                <section class="full-section-wrapper main-hero-image" id="hero-image" z-index="20">
-                                <!-- Bottom: Image or Design -->
-                                    <div>
-                                        <img src="assets/8M-2025.jpeg" alt="Hero Image">
-                                    </div>
-                                    <!-- Banner 1: After Hero (99CC33) -->
-                                    <div class="moving-banner" style="background-color: #8E44AD;">
-                                        <div class="banner-text">
-                                            <ul>
-                                                <li>AMIGAS</li>
-                                                <li>HERMANAS</li>
-                                                <li>HIJAS</li>
-                                                <li>PARCERAS</li>
-                                                <li>COMPAÑERES</li>
-                                                <li>CONOCE KEF</li>
-                                                <li>MADRES</li>
-                                                <li>ALIADAS</li>
-                                                <li>AMIGAS</li>
-                                                <li>HERMANAS</li>
-                                                <li>HIJAS</li>
-                                                <li>PARCERAS</li>
-                                                <li>COMPAÑERES</li>
-                                                <li>CONOCE KEF</li>
-                                                <li>MADRES</li>
-                                                <li>ALIADAS</li>
-                                            </ul>
-                                        </div>
-                                    </div>
-                                </section>
-                            <p>Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario).<br><br> ¡Así que súmate a esta historia! <br>KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
+                        </div>
+                        <section class="full-section-wrapper main-hero-image" id="hero-image" z-index="20">
+                        <!-- Bottom: Image or Design -->
+                            <div>
+                                <img src="assets/8M-2025.jpeg" alt="Hero Image">
+                            </div>
+                        </section>
+                        <div class="main-hero-text">
+                            <p>Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario).<br><br>KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
                             <div class="main-hero-button-container">
                                 <a class="main-hero-button" href="sumate.html">Súmate</a>
                             </div>
@@ -76,6 +55,29 @@
                                     <a href="https://tiktok.com" target="_blank">
                                         <img src="assets/icons/tiktok-icon.svg" alt="YouTube">
                                     </a>
+                                </div>
+                            </div>
+                            <!-- Banner 1: After Hero (99CC33) -->
+                            <div class="moving-banner" style="background-color: #8E44AD;">
+                                <div class="banner-text">
+                                    <ul>
+                                        <li>AMIGAS</li>
+                                        <li>HERMANAS</li>
+                                        <li>HIJAS</li>
+                                        <li>PARCERAS</li>
+                                        <li>COMPAÑERES</li>
+                                        <li>CONOCE KEF</li>
+                                        <li>MADRES</li>
+                                        <li>ALIADAS</li>
+                                        <li>AMIGAS</li>
+                                        <li>HERMANAS</li>
+                                        <li>HIJAS</li>
+                                        <li>PARCERAS</li>
+                                        <li>COMPAÑERES</li>
+                                        <li>CONOCE KEF</li>
+                                        <li>MADRES</li>
+                                        <li>ALIADAS</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
