--- a/sumate.html
+++ b/sumate.html
@@ -19,43 +19,49 @@
     </section>
     <!-- Activismo Section -->
     <section class="line-of-work">
-        <h2>Activismo</h2>
         <container class="about-section">
             <div class="about-us-image">
                 <img src="/assets/images/8M-2025/8M254.jpg">
             </div>
         </container>
-        <p>El activismo es una de nuestras principales líneas de acción. Al unirte, coordinarás y participarás en actividades de movilización, concienciación, y defensa de los derechos humanos.</p>
-        <p><strong>Actividades:</strong> Marchas, intervenciones urbanas, acciones simbólicas y campañas.</p>
-        <p><strong>Foco principal:</strong> Generar un cambio social a través de la movilización y la sensibilización ciudadana a través de acciones colectivas.</p>
-        <a href="activismo.html" class="cta-button" style="background-color: #D9A9FB;">Más sobre Activismo</a>
+        <div class="line-of-work-card activismo">
+            <h2>Activismo</h2>
+            <p>El activismo es una de nuestras principales líneas de acción. Al unirte, coordinarás y participarás en actividades de movilización, concienciación, y defensa de los derechos humanos.</p>
+            <p><strong>Actividades:</strong> Marchas, intervenciones urbanas, acciones simbólicas y campañas.</p>
+            <p><strong>Foco principal:</strong> Generar un cambio social a través de la movilización y la sensibilización ciudadana a través de acciones colectivas.</p>
+            <a href="activismo.html" class="cta-button" style="background-color: #D9A9FB;">Más sobre Activismo</a>
+        </div>
     </section>
     <!-- Formación e Intervención Section -->
     <section class="line-of-work">
-        <h2>Formación</h2>
         <container class="about-section">
             <div class="about-us-image">
                 <img src="/assets/images/VocesValientes/Voces1-2.jpeg">
             </div>
         </container>
-        <p>Formar a la próxima generación de líderes sociales y realizar intervenciones directas en comunidades es parte fundamental de nuestra misión. Al unirte, coordinarás talleres, capacitaciones, y programas de intervención.</p>
-        <p><strong>Actividades:</strong> Talleres, charlas, encuentros y espacios de aprendizaje con las comunidades.</p>
-        <p><strong>Foco principal:</strong> Desarrollar herramientas y estrategias formativas que impulsen la equidad de género y la justicia ambiental.</p>
-        <a href="formacion.html" class="cta-button" style="background-color: #FF8080;">Más sobre Educación</a>
+        <div class="line-of-work-card formacion">
+            <h2>Formación</h2>
+            <p>Formar a la próxima generación de líderes sociales y realizar intervenciones directas en comunidades es parte fundamental de nuestra misión. Al unirte, coordinarás talleres, capacitaciones, y programas de intervención.</p>
+            <p><strong>Actividades:</strong> Talleres, charlas, encuentros y espacios de aprendizaje con las comunidades.</p>
+            <p><strong>Foco principal:</strong> Desarrollar herramientas y estrategias formativas que impulsen la equidad de género y la justicia ambiental.</p>
+            <a href="formacion.html" class="cta-button" style="background-color: #FF8080;">Más sobre Educación</a>
+        </div>
     </section>
 
     <!-- Consumo Local y Consciente Section -->
     <section class="line-of-work">
-        <h2>Colaboración</h2>
         <container class="about-section">
             <div class="about-us-image">
                 <img src="/assets/images/COP16/PB2-1.jpeg">
             </div>
         </container>
-        <p>Apoyar el consumo responsable y sostenible a nivel local es parte de nuestro trabajo.  Si tienes un producto local y/o artesanal que genere un impacto social, ambiental y de género, queremos que hagas parte de nuestras aliadas.  Al unirte, apoyaremos la visibilidad de tus productos y participarás en eventos que promueven prácticas de consumo consciente en la ciudad.</p>
-        <p><strong>Actividades:</strong> Alianzas, estrategias de concientización y ferias locales.</p>
-        <p><strong>Foco principal:</strong> Fomentar el consumo local y las prácticas sostenibles que ponen el cuidado de la vida en el centro de todo.</p>
-        <a href="consumo.html" class="cta-button" style="background-color: #99CC33;">Más sobre Colaboración</a>
+        <div class="line-of-work-card colaboracion">
+            <h2>Colaboración</h2>
+            <p>Apoyar el consumo responsable y sostenible a nivel local es parte de nuestro trabajo.  Si tienes un producto local y/o artesanal que genere un impacto social, ambiental y de género, queremos que hagas parte de nuestras aliadas.  Al unirte, apoyaremos la visibilidad de tus productos y participarás en eventos que promueven prácticas de consumo consciente en la ciudad.</p>
+            <p><strong>Actividades:</strong> Alianzas, estrategias de concientización y ferias locales.</p>
+            <p><strong>Foco principal:</strong> Fomentar el consumo local y las prácticas sostenibles que ponen el cuidado de la vida en el centro de todo.</p>
+            <a href="consumo.html" class="cta-button" style="background-color: #99CC33;">Más sobre Colaboración</a>
+        </div>
     </section>
 
     <!-- Join Us CTA Section -->
