mayoria de arreglos implementados a abril 22

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                                 <img src="assets/8M-2025.jpeg" alt="Hero Image">
                             </div>
                         </section>
-                        <div class="main-hero-text">
+                        <div class="main-hero-text second-text">
                             <p>Aquí creemos en el poder de lo colectivo, en la fuerza de las mujeres cuando nos organizamos y en que otro mundo es posible (y necesario).<br><br>KEF es de todas, todes y todos los que quieran aportar a este movimiento.</p>
                             <div class="main-hero-button-container">
                                 <a class="main-hero-button" href="sumate.html">Súmate</a>
