--- a/sumate.html
+++ b/sumate.html
@@ -26,7 +26,7 @@
         </container>
         <div class="line-of-work-card activismo">
             <h2>Activismo</h2>
-            <p>El activismo es una de nuestras principales líneas de acción. Al unirte, coordinarás y participarás en actividades de movilización, concienciación, y defensa de los derechos humanos.</p>
+            <p>El activismo es una de nuestras principales líneas de acción. Al unirte, coordinarás y participarás en actividades de movilización, concienciación y defensa de los derechos humanos.</p>
             <p><strong>Actividades:</strong> Marchas, intervenciones urbanas, acciones simbólicas y campañas.</p>
             <p><strong>Foco principal:</strong> Generar un cambio social a través de la movilización y la sensibilización ciudadana a través de acciones colectivas.</p>
             <a href="activismo.html" class="cta-button" style="background-color: #D9A9FB;">Más sobre Activismo</a>
